fix: label and entry overlap in email field
The label of the email field used to return to its initial position
whenever the field losed focus and was invalid, which
sometimes could result in overlap with the text entried by the user.

Change the approach for the movement of labels, which used to rely on
input focus and validity, to the input class 'label-up', that provides
scripts full control over label positioning by class management.

--- a/style.css
+++ b/style.css
@@ -95,8 +95,7 @@ input ~ label {
     transition: .4s;
 }
 
-input:focus ~ label,
-input:valid ~ label {
+input.label-up ~ label {
     transform: translateY(-20px);
     font-size: 0.8em;
     letter-spacing: 0.1em;
